19209
{code:java}
scala> "\u000A".map(_.toInt)
res7: scala.collection.immutable.IndexedSeq[Int] = Vector(10)

scala> """\u000A""".map(_.toInt)
res8: scala.collection.immutable.IndexedSeq[Int] = Vector(10)

scala> "\u001A".map(_.toInt)
res9: scala.collection.immutable.IndexedSeq[Int] = Vector(26)

scala> """\u001A""".map(_.toInt)
<console>:1: error: illegal character
       """\u001A""".map(_.toInt)
               ^
{code}
